welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value Maths
	if ( Math.abs ( a - 10 ) < Maths.abs ( b - 10)) {
                                   ^close10:5: error: not found: value Maths
	if ( Math.abs ( b - 10 ) < Maths.abs ( a - 10)) {
                                   ^close10:8: error: not found: value Maths
	if ( Math.abs ( a - 10 ) == Maths.abs ( b - 10)) {
                                    ^close10:8: error: type mismatch;
 found   : Unit
 required: Int
	if ( Math.abs ( a - 10 ) == Maths.abs ( b - 10)) {
        ^